--- a/Crime Prediction.ipynb
+++ b/Crime Prediction.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -42,58 +42,58 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
        "      <td>7.7</td>\n",
        "      <td>23.6</td>\n",
        "      <td>8.7</td>\n",
        "      <td>18.2</td>\n",
        "      <td>27.5</td>\n",
        "      <td>23939</td>\n",
-       "      <td>39.0</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2.0</td>\n",
+       "      <td>2</td>\n",
        "      <td>7.8</td>\n",
        "      <td>17.2</td>\n",
        "      <td>8.8</td>\n",
        "      <td>20.8</td>\n",
        "      <td>38.5</td>\n",
        "      <td>23040</td>\n",
-       "      <td>46.0</td>\n",
+       "      <td>46</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
+       "      <td>3</td>\n",
        "      <td>3.8</td>\n",
        "      <td>24.0</td>\n",
        "      <td>8.9</td>\n",
        "      <td>11.8</td>\n",
        "      <td>22.2</td>\n",
        "      <td>35787</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>4.0</td>\n",
+       "      <td>4</td>\n",
        "      <td>3.4</td>\n",
        "      <td>10.9</td>\n",
        "      <td>8.2</td>\n",
        "      <td>13.4</td>\n",
        "      <td>25.5</td>\n",
        "      <td>37524</td>\n",
-       "      <td>17.0</td>\n",
+       "      <td>17</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>5.0</td>\n",
+       "      <td>5</td>\n",
        "      <td>0.3</td>\n",
        "      <td>7.5</td>\n",
        "      <td>5.2</td>\n",
        "      <td>4.5</td>\n",
        "      <td>26.2</td>\n",
        "      <td>57123</td>\n",
-       "      <td>6.0</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -101,11 +101,11 @@
       ],
       "text/plain": [
        "   Community Area Number  PERCENT OF HOUSING CROWDED  \\\n",
-       "0                    1.0                         7.7   \n",
-       "1                    2.0                         7.8   \n",
-       "2                    3.0                         3.8   \n",
-       "3                    4.0                         3.4   \n",
-       "4                    5.0                         0.3   \n",
+       "0                      1                         7.7   \n",
+       "1                      2                         7.8   \n",
+       "2                      3                         3.8   \n",
+       "3                      4                         3.4   \n",
+       "4                      5                         0.3   \n",
        "\n",
        "   PERCENT HOUSEHOLDS BELOW POVERTY  PERCENT AGED 16+ UNEMPLOYED  \\\n",
        "0                              23.6                          8.7   \n",
@@ -122,14 +122,14 @@
        "4                                           4.5   \n",
        "\n",
        "   PERCENT AGED UNDER 18 OR OVER 64  PER CAPITA INCOME   HARDSHIP INDEX  \n",
-       "0                              27.5               23939            39.0  \n",
-       "1                              38.5               23040            46.0  \n",
-       "2                              22.2               35787            20.0  \n",
-       "3                              25.5               37524            17.0  \n",
-       "4                              26.2               57123             6.0  "
+       "0                              27.5               23939              39  \n",
+       "1                              38.5               23040              46  \n",
+       "2                              22.2               35787              20  \n",
+       "3                              25.5               37524              17  \n",
+       "4                              26.2               57123               6  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -156,11 +156,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kelseyball/anaconda/lib/python2.7/site-packages/pandas/core/frame.py:2697: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame\n",
+      "\n",
+      "See the caveats in the documentation: http://pandas.pydata.org/pandas-docs/stable/indexing.html#indexing-view-versus-copy\n",
+      "  **kwargs)\n"
+     ]
+    }
+   ],
    "source": [
     "# Merge with the poverty dataframe\n",
     "data.rename(columns={'Community Area': 'Community Area Number'}, inplace=True)\n",
@@ -169,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -204,7 +216,7 @@
        "      <td>RESIDENCE</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>30</td>\n",
        "      <td>2012</td>\n",
        "      <td>15.2</td>\n",
        "      <td>30.7</td>\n",
@@ -212,7 +224,7 @@
        "      <td>54.8</td>\n",
        "      <td>33.8</td>\n",
        "      <td>10402</td>\n",
-       "      <td>96.0</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -220,7 +232,7 @@
        "      <td>SIDEWALK</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>30</td>\n",
        "      <td>2012</td>\n",
        "      <td>15.2</td>\n",
        "      <td>30.7</td>\n",
@@ -228,7 +240,7 @@
        "      <td>54.8</td>\n",
        "      <td>33.8</td>\n",
        "      <td>10402</td>\n",
-       "      <td>96.0</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -236,7 +248,7 @@
        "      <td>STREET</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>30</td>\n",
        "      <td>2012</td>\n",
        "      <td>15.2</td>\n",
        "      <td>30.7</td>\n",
@@ -244,7 +256,7 @@
        "      <td>54.8</td>\n",
        "      <td>33.8</td>\n",
        "      <td>10402</td>\n",
-       "      <td>96.0</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -252,7 +264,7 @@
        "      <td>SIDEWALK</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>30</td>\n",
        "      <td>2012</td>\n",
        "      <td>15.2</td>\n",
        "      <td>30.7</td>\n",
@@ -260,7 +272,7 @@
        "      <td>54.8</td>\n",
        "      <td>33.8</td>\n",
        "      <td>10402</td>\n",
-       "      <td>96.0</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -268,7 +280,7 @@
        "      <td>STREET</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
-       "      <td>30.0</td>\n",
+       "      <td>30</td>\n",
        "      <td>2012</td>\n",
        "      <td>15.2</td>\n",
        "      <td>30.7</td>\n",
@@ -276,7 +288,7 @@
        "      <td>54.8</td>\n",
        "      <td>33.8</td>\n",
        "      <td>10402</td>\n",
-       "      <td>96.0</td>\n",
+       "      <td>96</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -284,11 +296,11 @@
       ],
       "text/plain": [
        "   IUCR Location Description Arrest Domestic  Community Area Number  Year  \\\n",
-       "0  2820            RESIDENCE  False     True                   30.0  2012   \n",
-       "1  0560             SIDEWALK   True    False                   30.0  2012   \n",
-       "2  0460               STREET  False    False                   30.0  2012   \n",
-       "3  1811             SIDEWALK   True    False                   30.0  2012   \n",
-       "4  0460               STREET  False    False                   30.0  2012   \n",
+       "0  2820            RESIDENCE  False     True                     30  2012   \n",
+       "1  0560             SIDEWALK   True    False                     30  2012   \n",
+       "2  0460               STREET  False    False                     30  2012   \n",
+       "3  1811             SIDEWALK   True    False                     30  2012   \n",
+       "4  0460               STREET  False    False                     30  2012   \n",
        "\n",
        "   PERCENT OF HOUSING CROWDED  PERCENT HOUSEHOLDS BELOW POVERTY  \\\n",
        "0                        15.2                              30.7   \n",
@@ -305,14 +317,14 @@
        "4                         15.8                                          54.8   \n",
        "\n",
        "   PERCENT AGED UNDER 18 OR OVER 64  PER CAPITA INCOME   HARDSHIP INDEX  \n",
-       "0                              33.8               10402            96.0  \n",
-       "1                              33.8               10402            96.0  \n",
-       "2                              33.8               10402            96.0  \n",
-       "3                              33.8               10402            96.0  \n",
-       "4                              33.8               10402            96.0  "
+       "0                              33.8               10402              96  \n",
+       "1                              33.8               10402              96  \n",
+       "2                              33.8               10402              96  \n",
+       "3                              33.8               10402              96  \n",
+       "4                              33.8               10402              96  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,12 +335,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IUCR</th>\n",
+       "      <th>Location Description</th>\n",
+       "      <th>Arrest</th>\n",
+       "      <th>Domestic</th>\n",
+       "      <th>Community Area Number</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>PERCENT OF HOUSING CROWDED</th>\n",
+       "      <th>PERCENT HOUSEHOLDS BELOW POVERTY</th>\n",
+       "      <th>PERCENT AGED 16+ UNEMPLOYED</th>\n",
+       "      <th>PERCENT AGED 25+ WITHOUT HIGH SCHOOL DIPLOMA</th>\n",
+       "      <th>PERCENT AGED UNDER 18 OR OVER 64</th>\n",
+       "      <th>PER CAPITA INCOME</th>\n",
+       "      <th>HARDSHIP INDEX</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>312</td>\n",
+       "      <td>132</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>54.8</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>10402</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>81</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>54.8</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>10402</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>41</td>\n",
+       "      <td>152</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>54.8</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>10402</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>257</td>\n",
+       "      <td>148</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>54.8</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>10402</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>41</td>\n",
+       "      <td>152</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>15.2</td>\n",
+       "      <td>30.7</td>\n",
+       "      <td>15.8</td>\n",
+       "      <td>54.8</td>\n",
+       "      <td>33.8</td>\n",
+       "      <td>10402</td>\n",
+       "      <td>96</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   IUCR  Location Description  Arrest  Domestic  Community Area Number  Year  \\\n",
+       "0   312                   132       0         1                     30  2012   \n",
+       "1    81                   148       1         0                     30  2012   \n",
+       "2    41                   152       0         0                     30  2012   \n",
+       "3   257                   148       1         0                     30  2012   \n",
+       "4    41                   152       0         0                     30  2012   \n",
+       "\n",
+       "   PERCENT OF HOUSING CROWDED  PERCENT HOUSEHOLDS BELOW POVERTY  \\\n",
+       "0                        15.2                              30.7   \n",
+       "1                        15.2                              30.7   \n",
+       "2                        15.2                              30.7   \n",
+       "3                        15.2                              30.7   \n",
+       "4                        15.2                              30.7   \n",
+       "\n",
+       "   PERCENT AGED 16+ UNEMPLOYED  PERCENT AGED 25+ WITHOUT HIGH SCHOOL DIPLOMA  \\\n",
+       "0                         15.8                                          54.8   \n",
+       "1                         15.8                                          54.8   \n",
+       "2                         15.8                                          54.8   \n",
+       "3                         15.8                                          54.8   \n",
+       "4                         15.8                                          54.8   \n",
+       "\n",
+       "   PERCENT AGED UNDER 18 OR OVER 64  PER CAPITA INCOME   HARDSHIP INDEX  \n",
+       "0                              33.8               10402              96  \n",
+       "1                              33.8               10402              96  \n",
+       "2                              33.8               10402              96  \n",
+       "3                              33.8               10402              96  \n",
+       "4                              33.8               10402              96  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "features = ['IUCR', 'Location Description', 'Arrest', 'Domestic']\n",
+    "for a in features:\n",
+    "    le = LabelEncoder()\n",
+    "    le.fit(data[a])\n",
+    "    data[a] = le.transform(data[a])\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.cross_validation import train_test_split\n",
+    "\n",
+    "data = data.dropna()\n",
+    "X = data.drop(['Arrest'], axis=1)\n",
+    "y = data['Arrest'].astype(int)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=.33, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LogisticRegression(C=1.0, class_weight=None, dual=False, fit_intercept=True,\n",
+       "          intercept_scaling=1, max_iter=100, multi_class='ovr', n_jobs=1,\n",
+       "          penalty='l2', random_state=None, solver='liblinear', tol=0.0001,\n",
+       "          verbose=0, warm_start=False)"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn import linear_model\n",
+    "\n",
+    "logr = linear_model.LogisticRegression()\n",
+    "logr.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.77308677638618439"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "logr.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.8600153   0.1399847 ]\n",
+      " [ 0.42198732  0.57801268]\n",
+      " [ 0.76285514  0.23714486]\n",
+      " ..., \n",
+      " [ 0.60499482  0.39500518]\n",
+      " [ 0.77966898  0.22033102]\n",
+      " [ 0.4804173   0.5195827 ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Todo: gridsearchCV for best params\n",
+    "# ROC curve\n",
+    "\n",
+    "probs = logr.predict_proba(x_test)\n",
+    "print probs\n"
+   ]
   },
   {
    "cell_type": "code",
