--- a/RJ.ipynb
+++ b/RJ.ipynb
@@ -122,20 +122,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
+    "#start from here if reading from .h5\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "store = pd.HDFStore('store.h5')\n",
+    "\n",
+    "data_subset = store['data_subset']\n",
+    "\n",
+    "print(\"finished loading\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -152,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -164,35 +176,57 @@
     "\n",
     "plt.bar(X, dayCounts.values, align='center')\n",
     "\n",
-    "plt.xticks(X, dayCounts.axes[0]) # ['S', 'M', 'T', 'W', 'Th', 'F', 'Sa'])#\n",
+    "plt.xticks(X, ['S', 'M', 'T', 'W', 'Th', 'F', 'Sa'])#\n",
+    "\n",
+    "# axes = plt.gca()\n",
+    "# axes.set_ylim([800000,1000000])\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 39,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "def monthNormalize(monthCounts):\n",
+    "    i = 1\n",
+    "    for key in monthCounts:\n",
+    "        if(i in [1, 3, 5, 7, 8, 10, 12]):\n",
+    "            monthCounts[i-1] /= 31\n",
+    "        elif (i == 2):\n",
+    "            monthCounts[i-1] /= 28.25 #2001-16 has 4 leap febs and 12 non-leap febs\n",
+    "        else :\n",
+    "            monthCounts[i-1] /= 30 \n",
+    "        i += 1\n",
+    "            \n",
+    "    return monthCounts\n",
+    "    \n",
+    "\n",
     "monthCounts = data_subset.Month.value_counts().sort_index()\n",
+    "\n",
+    "monthCounts = monthNormalize(monthCounts)\n",
     "\n",
     "X = np.arange(len(monthCounts))\n",
     "\n",
     "plt.bar(X, monthCounts.values, align='center')\n",
     "\n",
-    "plt.xticks(X, monthCounts.axes[0]) # ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\n",
+    "plt.xticks(X,  ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\n",
+    "\n",
+    "axes = plt.gca()\n",
+    "axes.set_ylim([14000,18000])\n",
     "\n",
     "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 43,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -202,9 +236,78 @@
     "\n",
     "plt.bar(X, yearCounts.values, align='center')\n",
     "\n",
-    "plt.xticks(X, yearCounts.axes[0])\n",
+    "plt.xticks(X, yearCounts.axes[0].map(lambda x : x[-2:]))\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "rows_list = []\n",
+    "\n",
+    "for i in range(2001, 2016):\n",
+    "    year = str(i)\n",
+    "    ser = pd.Series(data_subset.where(data_new['Year'] == year).Month.value_counts(), name=year)\n",
+    "    rows_list.append(ser)\n",
+    "\n",
+    "counts_frame = pd.DataFrame(rows_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 31448.73599254,  34413.04680637,  33971.64551268,  35259.0173458 ,\n",
+       "         35133.10770914,  33226.3101517 ,  33834.24449234,  30395.57687882,\n",
+       "         28255.56779079],\n",
+       "       [ 28386.64298305,  30364.83602264,  30086.60695081,  31231.05447456,\n",
+       "         31550.04169345,  29466.07001782,  29089.28420158,  26814.01724725,\n",
+       "         25033.57990024],\n",
+       "       [ 41018.97591303,  43932.87208923,  43579.87852796,  46229.31226952,\n",
+       "         45516.33513491,  43349.58438948,  44599.89605861,  39058.42986564,\n",
+       "         36330.60133221],\n",
+       "       [ 21476.79395302,  23181.72992809,  22895.38607591,  23206.94564897,\n",
+       "         23991.66202176,  21981.57310198,  20910.06910887,  20247.56670712,\n",
+       "         19014.11290828],\n",
+       "       [ 38562.46925811,  41365.43238911,  40981.94811215,  43867.68377597,\n",
+       "         42993.3031957 ,  40555.6307573 ,  41634.70454038,  36171.2865898 ,\n",
+       "         34252.53035922]])"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counts_frame\n",
+    "\n",
+    "from sklearn import datasets, linear_model\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "\n",
+    "indep_vars = ['01', '02', '03']\n",
+    "dep_vars = ['04', '05', '06', '07', '08', '09', '10', '11', '12']\n",
+    "indep_data = counts_frame[indep_vars]\n",
+    "dep_data = counts_frame[dep_vars]\n",
+    "indep_train, indep_test, dep_train, dep_test = train_test_split(indep_data, dep_data, test_size=0.33, random_state=42)\n",
+    "\n",
+    "regr = linear_model.LinearRegression()\n",
+    "regr.fit(indep_train, dep_train)\n",
+    "\n",
+    "regr_predict = regr.predict(indep_test)\n",
+    "regr_predict"
    ]
   }
  ],
