--- a/RJ.ipynb
+++ b/RJ.ipynb
@@ -261,53 +261,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 158,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Predict for 2016\n",
+    "\n",
+    "# get 2016 series\n",
+    "i = 2016\n",
+    "year = str(i)\n",
+    "ser = pd.Series(data_subset.where(data_new['Year'] == year).Month.value_counts(), name=year)\n",
+    "\n",
+    "from sklearn import datasets, linear_model\n",
+    "from sklearn.cross_validation import train_test_split\n",
+    "\n",
+    "# predict all other months from first Jan, Feb and Mar\n",
+    "indep_vars = ['01', '02', '03']\n",
+    "dep_vars = ['04', '05', '06', '07', '08', '09', '10', '11', '12']\n",
+    "indep_data = counts_frame[indep_vars]\n",
+    "dep_data = counts_frame[dep_vars]\n",
+    "\n",
+    "# train on 2001-2015, predict on 2016\n",
+    "indep_train = indep_data\n",
+    "dep_train = dep_data\n",
+    "indep_test = pd.DataFrame(ser).T.drop('04', 1)\n",
+    "\n",
+    "# fit\n",
+    "regr = linear_model.LinearRegression()\n",
+    "regr.fit(indep_train, dep_train)\n",
+    "\n",
+    "# predict\n",
+    "regr_predict = regr.predict(indep_test)\n",
+    "\n",
+    "plt.bar(range(1, 4), indep_test.as_matrix()[0], align = 'center', color = 'red')\n",
+    "plt.bar(range(4, 13), regr_predict[0], align = 'center')\n",
+    "\n",
+    "plt.xticks(range(1, 13),  ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 31448.73599254,  34413.04680637,  33971.64551268,  35259.0173458 ,\n",
-       "         35133.10770914,  33226.3101517 ,  33834.24449234,  30395.57687882,\n",
-       "         28255.56779079],\n",
-       "       [ 28386.64298305,  30364.83602264,  30086.60695081,  31231.05447456,\n",
-       "         31550.04169345,  29466.07001782,  29089.28420158,  26814.01724725,\n",
-       "         25033.57990024],\n",
-       "       [ 41018.97591303,  43932.87208923,  43579.87852796,  46229.31226952,\n",
-       "         45516.33513491,  43349.58438948,  44599.89605861,  39058.42986564,\n",
-       "         36330.60133221],\n",
-       "       [ 21476.79395302,  23181.72992809,  22895.38607591,  23206.94564897,\n",
-       "         23991.66202176,  21981.57310198,  20910.06910887,  20247.56670712,\n",
-       "         19014.11290828],\n",
-       "       [ 38562.46925811,  41365.43238911,  40981.94811215,  43867.68377597,\n",
-       "         42993.3031957 ,  40555.6307573 ,  41634.70454038,  36171.2865898 ,\n",
-       "         34252.53035922]])"
-      ]
-     },
-     "execution_count": 95,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 = 65.90%\n"
+     ]
     }
    ],
    "source": [
-    "counts_frame\n",
-    "\n",
-    "from sklearn import datasets, linear_model\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "# train and test the normal way to find R2\n",
     "\n",
     "indep_vars = ['01', '02', '03']\n",
     "dep_vars = ['04', '05', '06', '07', '08', '09', '10', '11', '12']\n",
     "indep_data = counts_frame[indep_vars]\n",
     "dep_data = counts_frame[dep_vars]\n",
-    "indep_train, indep_test, dep_train, dep_test = train_test_split(indep_data, dep_data, test_size=0.33, random_state=42)\n",
+    "indep_train, indep_test, dep_train, dep_test = train_test_split(indep_data, dep_data, test_size=0.01, random_state=42)\n",
     "\n",
+    "# train\n",
     "regr = linear_model.LinearRegression()\n",
     "regr.fit(indep_train, dep_train)\n",
     "\n",
+    "# predict\n",
     "regr_predict = regr.predict(indep_test)\n",
-    "regr_predict"
+    "\n",
+    "# find numerator\n",
+    "numerator = np.mean(np.square(dep_test.as_matrix() - regr_predict))\n",
+    "\n",
+    "# find denominator\n",
+    "a = []\n",
+    "for i in range(0, len(dep_test)):\n",
+    "    a.append(np.mean(dep_train, axis = 0))\n",
+    "    \n",
+    "denominator = np.mean(np.square(dep_test.as_matrix() - a))\n",
+    "\n",
+    "# calculate R2\n",
+    "R2 = 1 - (numerator / denominator)\n",
+    "\n",
+    "print(\"R2 = %.2f%%\" % (R2*100))\n"
    ]
   }
  ],
