finished prediction-- kinda

--- a/RJ.ipynb
+++ b/RJ.ipynb
@@ -8,6 +8,8 @@
    },
    "outputs": [],
    "source": [
+    "# read from crimes.csv\n",
+    "\n",
     "import dask.dataframe as dd\n",
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -52,6 +54,8 @@
    },
    "outputs": [],
    "source": [
+    "# convert date and time to different formats in a new DataFrame and store in .h5 file\n",
+    "\n",
     "import datetime\n",
     "import locale\n",
     "\n",
@@ -128,7 +132,7 @@
    },
    "outputs": [],
    "source": [
-    "#start from here if reading from .h5\n",
+    "# start from here if reading from .h5\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -151,6 +155,8 @@
    },
    "outputs": [],
    "source": [
+    "# number of crimes vs hour of day\n",
+    "\n",
     "hourCounts = data_subset.Hour.value_counts().sort_index()\n",
     "\n",
     "X = np.arange(len(hourCounts))\n",
@@ -170,13 +176,15 @@
    },
    "outputs": [],
    "source": [
+    "# number of crimes vs day of week\n",
+    "\n",
     "dayCounts = data_subset.Day.value_counts().sort_index()\n",
     "\n",
     "X = np.arange(len(dayCounts))\n",
     "\n",
     "plt.bar(X, dayCounts.values, align='center')\n",
     "\n",
-    "plt.xticks(X, ['S', 'M', 'T', 'W', 'Th', 'F', 'Sa'])#\n",
+    "plt.xticks(X, ['S', 'M', 'T', 'W', 'Th', 'F', 'Sa'])\n",
     "\n",
     "# axes = plt.gca()\n",
     "# axes.set_ylim([800000,1000000])\n",
@@ -186,12 +194,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 165,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# number of crimes vs month for years 2001-15 (excludes 16)\n",
+    "\n",
+    "# divide by number of days in each month\n",
     "def monthNormalize(monthCounts):\n",
     "    i = 1\n",
     "    for key in monthCounts:\n",
@@ -204,9 +215,10 @@
     "        i += 1\n",
     "            \n",
     "    return monthCounts\n",
-    "    \n",
     "\n",
-    "monthCounts = data_subset.Month.value_counts().sort_index()\n",
+    "# exclude 2016    \n",
+    "monthCounts = data_subset.where(data_new['Year'] != '2016').Month.value_counts().sort_index()\n",
+    "#monthCounts = data_subset.Month.value_counts().sort_index()\n",
     "\n",
     "monthCounts = monthNormalize(monthCounts)\n",
     "\n",
@@ -230,6 +242,8 @@
    },
    "outputs": [],
    "source": [
+    "# number of crimes vs year\n",
+    "\n",
     "yearCounts = data_subset.Year.value_counts().sort_index()\n",
     "\n",
     "X = np.arange(len(yearCounts))\n",
@@ -249,6 +263,8 @@
    },
    "outputs": [],
    "source": [
+    "# pre-processing for prediction\n",
+    "\n",
     "rows_list = []\n",
     "\n",
     "for i in range(2001, 2016):\n",
@@ -261,13 +277,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 170,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Predict for 2016\n",
+    "# Predict for 2016 based on first three months\n",
     "\n",
     "# get 2016 series\n",
     "i = 2016\n",
@@ -294,6 +310,8 @@
     "\n",
     "# predict\n",
     "regr_predict = regr.predict(indep_test)\n",
+    "\n",
+    "predicted_year_crime_2016 = np.sum(regr_predict)\n",
     "\n",
     "plt.bar(range(1, 4), indep_test.as_matrix()[0], align = 'center', color = 'red')\n",
     "plt.bar(range(4, 13), regr_predict[0], align = 'center')\n",
@@ -348,6 +366,30 @@
     "R2 = 1 - (numerator / denominator)\n",
     "\n",
     "print(\"R2 = %.2f%%\" % (R2*100))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# number of crimes vs year with predicted 2016\n",
+    "\n",
+    "yearCounts = data_subset.Year.value_counts().sort_index()\n",
+    "\n",
+    "plt.bar(np.array(len(yearCounts) - 1), np.array(yearCounts['2016'] + predicted_year_crime_2016), align='center', color='red')\n",
+    "#print(yearCounts['2016'] + predicted_year_crime_2016)\n",
+    "\n",
+    "X = np.arange(len(yearCounts))\n",
+    "\n",
+    "plt.bar(X, yearCounts.values, align='center', tick_label=yearCounts.values)\n",
+    "\n",
+    "plt.xticks(X, yearCounts.axes[0].map(lambda x : x[-2:]))\n",
+    "\n",
+    "plt.show()"
    ]
   }
  ],
