--- a/RJ.ipynb
+++ b/RJ.ipynb
@@ -126,11 +126,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 183,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "finished loading\n"
+     ]
+    }
+   ],
    "source": [
     "# start from here if reading from .h5\n",
     "\n",
@@ -277,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 203,
    "metadata": {
     "collapsed": false
    },
@@ -313,8 +321,8 @@
     "\n",
     "predicted_year_crime_2016 = np.sum(regr_predict)\n",
     "\n",
-    "plt.bar(range(1, 4), indep_test.as_matrix()[0], align = 'center', color = 'red')\n",
-    "plt.bar(range(4, 13), regr_predict[0], align = 'center')\n",
+    "plt.bar(range(1, 4), indep_test.as_matrix()[0], align = 'center')\n",
+    "plt.bar(range(4, 13), regr_predict[0], align = 'center', color = 'red')\n",
     "\n",
     "plt.xticks(range(1, 13),  ['Jan', 'Feb', 'Mar', 'Apr', 'May', 'Jun', 'Jul', 'Aug', 'Sep', 'Oct', 'Nov', 'Dec'])\n",
     "\n",
@@ -390,6 +398,88 @@
     "plt.xticks(X, yearCounts.axes[0].map(lambda x : x[-2:]))\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         Year Month Day Hour                    Date\n",
+      "979104   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979158   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979174   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979201   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979205   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979222   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979245   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979326   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979353   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979366   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979398   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979415   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979487   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979541   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979585   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979627   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "979853   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "980081   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "980928   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "981104   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "982023   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "982085   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "985481   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "986765   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "988293   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "989759   2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "1051062  2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "1060002  2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "1187994  2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "2474259  2001    01   1   01  01/01/2001 01:00:00 AM\n",
+      "...       ...   ...  ..  ...                     ...\n",
+      "919081   2016    04   2   12  04/12/2016 12:20:00 PM\n",
+      "901596   2016    04   2   00  04/12/2016 12:22:00 AM\n",
+      "906163   2016    04   2   12  04/12/2016 12:25:00 PM\n",
+      "907279   2016    04   2   12  04/12/2016 12:27:00 PM\n",
+      "901171   2016    04   2   00  04/12/2016 12:28:00 AM\n",
+      "902882   2016    04   2   00  04/12/2016 12:30:00 AM\n",
+      "920152   2016    04   2   00  04/12/2016 12:30:00 AM\n",
+      "906650   2016    04   2   12  04/12/2016 12:30:00 PM\n",
+      "907447   2016    04   2   12  04/12/2016 12:30:00 PM\n",
+      "908545   2016    04   2   12  04/12/2016 12:30:00 PM\n",
+      "909288   2016    04   2   12  04/12/2016 12:30:00 PM\n",
+      "909321   2016    04   2   12  04/12/2016 12:30:00 PM\n",
+      "912190   2016    04   2   12  04/12/2016 12:30:00 PM\n",
+      "919567   2016    04   2   12  04/12/2016 12:30:00 PM\n",
+      "919887   2016    04   2   12  04/12/2016 12:30:00 PM\n",
+      "904145   2016    04   2   00  04/12/2016 12:38:00 AM\n",
+      "903038   2016    04   2   00  04/12/2016 12:40:00 AM\n",
+      "901615   2016    04   2   00  04/12/2016 12:45:00 AM\n",
+      "918836   2016    04   2   00  04/12/2016 12:45:00 AM\n",
+      "919596   2016    04   2   00  04/12/2016 12:45:00 AM\n",
+      "907240   2016    04   2   12  04/12/2016 12:45:00 PM\n",
+      "907373   2016    04   2   12  04/12/2016 12:45:00 PM\n",
+      "906310   2016    04   2   12  04/12/2016 12:46:00 PM\n",
+      "901429   2016    04   2   00  04/12/2016 12:50:00 AM\n",
+      "903152   2016    04   2   00  04/12/2016 12:50:00 AM\n",
+      "908145   2016    04   2   12  04/12/2016 12:50:00 PM\n",
+      "917669   2016    04   2   12  04/12/2016 12:50:00 PM\n",
+      "908820   2016    04   2   12  04/12/2016 12:51:00 PM\n",
+      "901671   2016    04   2   00  04/12/2016 12:52:00 AM\n",
+      "908216   2016    04   2   12  04/12/2016 12:59:00 PM\n",
+      "\n",
+      "[6040759 rows x 5 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(data_subset.sort_values(['Year', 'Month', 'Date']))"
    ]
   }
  ],
