--- a/Crime Prediction Ben.ipynb
+++ b/Crime Prediction Ben.ipynb
@@ -188,8 +188,8 @@
    "outputs": [],
    "source": [
     "# Merge with the poverty dataframe\n",
-    "data_full = data.rename(columns={'Community Area': 'Community Area Number'})\n",
-    "data_full = dk.merge(data_full, poverty, how='right', on='Community Area Number')"
+    "data_full = data_full.rename(columns={'Community Area': 'Community Area Number'})\n",
+    "data_full = pd.merge(data_full, poverty, how='right', on='Community Area Number')"
    ]
   },
   {
@@ -224,124 +224,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>99994</th>\n",
-       "      <td>0320</td>\n",
+       "      <th>4230341</th>\n",
+       "      <td>0910</td>\n",
        "      <td>STREET</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>2011</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>19.2</td>\n",
+       "      <td>12.1</td>\n",
+       "      <td>31.9</td>\n",
+       "      <td>42.8</td>\n",
+       "      <td>17104</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2833880</th>\n",
+       "      <td>0610</td>\n",
+       "      <td>RESIDENCE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2003</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>14.7</td>\n",
+       "      <td>6.6</td>\n",
+       "      <td>12.9</td>\n",
+       "      <td>21.7</td>\n",
+       "      <td>43198</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3327679</th>\n",
+       "      <td>1310</td>\n",
+       "      <td>APARTMENT</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>29.3</td>\n",
+       "      <td>24.3</td>\n",
+       "      <td>15.9</td>\n",
+       "      <td>39.5</td>\n",
+       "      <td>23472</td>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1362901</th>\n",
+       "      <td>2825</td>\n",
+       "      <td>RESIDENCE</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>2005</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>27.8</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>14.5</td>\n",
+       "      <td>40.3</td>\n",
+       "      <td>18881</td>\n",
+       "      <td>60.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1880689</th>\n",
+       "      <td>0486</td>\n",
+       "      <td>SIDEWALK</td>\n",
+       "      <td>False</td>\n",
        "      <td>True</td>\n",
-       "      <td>False</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2004</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>40959</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99995</th>\n",
-       "      <td>0430</td>\n",
-       "      <td>PARKING LOT/GARAGE(NON.RESID.)</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2010</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>40959</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99996</th>\n",
-       "      <td>0840</td>\n",
-       "      <td>COMMERCIAL / BUSINESS OFFICE</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>40959</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99997</th>\n",
-       "      <td>2826</td>\n",
-       "      <td>POOL ROOM</td>\n",
-       "      <td>False</td>\n",
-       "      <td>True</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>40959</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99998</th>\n",
-       "      <td>0890</td>\n",
-       "      <td>RESIDENTIAL YARD (FRONT/BACK)</td>\n",
-       "      <td>False</td>\n",
-       "      <td>False</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>2011</td>\n",
-       "      <td>1.1</td>\n",
-       "      <td>3.3</td>\n",
-       "      <td>6.5</td>\n",
-       "      <td>7.4</td>\n",
-       "      <td>35.3</td>\n",
-       "      <td>40959</td>\n",
-       "      <td>8.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>2014</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>19.8</td>\n",
+       "      <td>20.3</td>\n",
+       "      <td>16.9</td>\n",
+       "      <td>41.2</td>\n",
+       "      <td>17949</td>\n",
+       "      <td>52.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       IUCR            Location Description Arrest Domestic  \\\n",
-       "99994  0320                          STREET   True    False   \n",
-       "99995  0430  PARKING LOT/GARAGE(NON.RESID.)  False    False   \n",
-       "99996  0840    COMMERCIAL / BUSINESS OFFICE  False    False   \n",
-       "99997  2826                       POOL ROOM  False     True   \n",
-       "99998  0890   RESIDENTIAL YARD (FRONT/BACK)  False    False   \n",
+       "         IUCR Location Description Arrest Domestic  Community Area Number  \\\n",
+       "4230341  0910               STREET  False    False                   52.0   \n",
+       "2833880  0610            RESIDENCE  False    False                   24.0   \n",
+       "3327679  1310            APARTMENT  False    False                   38.0   \n",
+       "1362901  2825            RESIDENCE  False    False                   44.0   \n",
+       "1880689  0486             SIDEWALK  False     True                   49.0   \n",
        "\n",
-       "       Community Area Number  Year  PERCENT OF HOUSING CROWDED  \\\n",
-       "99994                    9.0  2004                         1.1   \n",
-       "99995                    9.0  2010                         1.1   \n",
-       "99996                    9.0  2011                         1.1   \n",
-       "99997                    9.0  2011                         1.1   \n",
-       "99998                    9.0  2011                         1.1   \n",
+       "         Year  PERCENT OF HOUSING CROWDED  PERCENT HOUSEHOLDS BELOW POVERTY  \\\n",
+       "4230341  2011                         6.8                              19.2   \n",
+       "2833880  2003                         2.3                              14.7   \n",
+       "3327679  2015                         3.3                              29.3   \n",
+       "1362901  2005                         3.3                              27.8   \n",
+       "1880689  2014                         2.5                              19.8   \n",
        "\n",
-       "       PERCENT HOUSEHOLDS BELOW POVERTY  PERCENT AGED 16+ UNEMPLOYED  \\\n",
-       "99994                               3.3                          6.5   \n",
-       "99995                               3.3                          6.5   \n",
-       "99996                               3.3                          6.5   \n",
-       "99997                               3.3                          6.5   \n",
-       "99998                               3.3                          6.5   \n",
+       "         PERCENT AGED 16+ UNEMPLOYED  \\\n",
+       "4230341                         12.1   \n",
+       "2833880                          6.6   \n",
+       "3327679                         24.3   \n",
+       "1362901                         24.0   \n",
+       "1880689                         20.3   \n",
        "\n",
-       "       PERCENT AGED 25+ WITHOUT HIGH SCHOOL DIPLOMA  \\\n",
-       "99994                                           7.4   \n",
-       "99995                                           7.4   \n",
-       "99996                                           7.4   \n",
-       "99997                                           7.4   \n",
-       "99998                                           7.4   \n",
+       "         PERCENT AGED 25+ WITHOUT HIGH SCHOOL DIPLOMA  \\\n",
+       "4230341                                          31.9   \n",
+       "2833880                                          12.9   \n",
+       "3327679                                          15.9   \n",
+       "1362901                                          14.5   \n",
+       "1880689                                          16.9   \n",
        "\n",
-       "       PERCENT AGED UNDER 18 OR OVER 64  PER CAPITA INCOME   HARDSHIP INDEX  \n",
-       "99994                              35.3               40959             8.0  \n",
-       "99995                              35.3               40959             8.0  \n",
-       "99996                              35.3               40959             8.0  \n",
-       "99997                              35.3               40959             8.0  \n",
-       "99998                              35.3               40959             8.0  "
+       "         PERCENT AGED UNDER 18 OR OVER 64  PER CAPITA INCOME   HARDSHIP INDEX  \n",
+       "4230341                              42.8               17104            64.0  \n",
+       "2833880                              21.7               43198            10.0  \n",
+       "3327679                              39.5               23472            57.0  \n",
+       "1362901                              40.3               18881            60.0  \n",
+       "1880689                              41.2               17949            52.0  "
       ]
      },
      "execution_count": 5,
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -403,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -413,7 +413,9 @@
      "output_type": "stream",
      "text": [
       "/usr/local/lib/python2.7/site-packages/sklearn/linear_model/coordinate_descent.py:1051: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples, ), for example using ravel().\n",
-      "  y = column_or_1d(y, warn=True)\n"
+      "  y = column_or_1d(y, warn=True)\n",
+      "/usr/local/lib/python2.7/site-packages/sklearn/linear_model/coordinate_descent.py:466: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations\n",
+      "  ConvergenceWarning)\n"
      ]
     },
     {
@@ -425,7 +427,7 @@
        "    selection='cyclic', tol=0.0001, verbose=False)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -448,7 +450,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.544759975495\n"
+      "0.548372507306\n"
      ]
     }
    ],
@@ -456,6 +458,43 @@
     "from sklearn import metrics\n",
     "# Print the r^2 value for the lasso function\n",
     "print clf.score(X_test, y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "526\n",
+      "1e-05\n",
+      "['IUCR_0261', 'IUCR_0263', 'IUCR_0265', 'IUCR_0266', 'IUCR_0275', 'IUCR_0281', 'IUCR_0291', 'IUCR_0312', 'IUCR_0313', 'IUCR_031A', 'IUCR_031B', 'IUCR_0320', 'IUCR_0325', 'IUCR_0326', 'IUCR_0330', 'IUCR_0331', 'IUCR_0334', 'IUCR_0337', 'IUCR_033A', 'IUCR_033B', 'IUCR_0340', 'IUCR_041A', 'IUCR_041B', 'IUCR_0420', 'IUCR_0430', 'IUCR_0440', 'IUCR_0452', 'IUCR_0453', 'IUCR_0454', 'IUCR_0460', 'IUCR_0461', 'IUCR_0462', 'IUCR_0470', 'IUCR_0479', 'IUCR_0485', 'IUCR_0486', 'IUCR_0489', 'IUCR_0495', 'IUCR_0497', 'IUCR_051A', 'IUCR_0545', 'IUCR_0550', 'IUCR_0553', 'IUCR_0554', 'IUCR_0558', 'IUCR_0560', 'IUCR_0580', 'IUCR_0610', 'IUCR_0620', 'IUCR_0630', 'IUCR_0650', 'IUCR_0810', 'IUCR_0820', 'IUCR_0840', 'IUCR_0841', 'IUCR_0842', 'IUCR_0843', 'IUCR_0850', 'IUCR_0870', 'IUCR_0880', 'IUCR_0890', 'IUCR_0895', 'IUCR_0910', 'IUCR_0915', 'IUCR_0917', 'IUCR_0920', 'IUCR_0925', 'IUCR_0930', 'IUCR_0937', 'IUCR_1020', 'IUCR_1025', 'IUCR_1090', 'IUCR_1110', 'IUCR_1120', 'IUCR_1121', 'IUCR_1122', 'IUCR_1130', 'IUCR_1140', 'IUCR_1150', 'IUCR_1151', 'IUCR_1152', 'IUCR_1153', 'IUCR_1154', 'IUCR_1155', 'IUCR_1156', 'IUCR_1195', 'IUCR_1200', 'IUCR_1205', 'IUCR_1206', 'IUCR_1220', 'IUCR_1235', 'IUCR_1240', 'IUCR_1242', 'IUCR_1305', 'IUCR_1310', 'IUCR_1320', 'IUCR_1330', 'IUCR_1335', 'IUCR_1340', 'IUCR_1345', 'IUCR_1350', 'IUCR_1360', 'IUCR_1370', 'IUCR_1375', 'IUCR_141B', 'IUCR_141C', 'IUCR_1435', 'IUCR_143A', 'IUCR_143B', 'IUCR_143C', 'IUCR_1460', 'IUCR_1505', 'IUCR_1506', 'IUCR_1507', 'IUCR_1512', 'IUCR_1513', 'IUCR_1525', 'IUCR_1536', 'IUCR_1540', 'IUCR_1544', 'IUCR_1549', 'IUCR_1562', 'IUCR_1563', 'IUCR_1565', 'IUCR_1626', 'IUCR_1651', 'IUCR_1661', 'IUCR_1670', 'IUCR_1680', 'IUCR_1750', 'IUCR_1751', 'IUCR_1752', 'IUCR_1754', 'IUCR_1780', 'IUCR_1790', 'IUCR_1792', 'IUCR_1811', 'IUCR_1812', 'IUCR_1821', 'IUCR_1822', 'IUCR_1850', 'IUCR_1900', 'IUCR_2010', 'IUCR_2011', 'IUCR_2012', 'IUCR_2013', 'IUCR_2014', 'IUCR_2016', 'IUCR_2017', 'IUCR_2018', 'IUCR_2020', 'IUCR_2021', 'IUCR_2022', 'IUCR_2023', 'IUCR_2024', 'IUCR_2025', 'IUCR_2026', 'IUCR_2027', 'IUCR_2028', 'IUCR_2029', 'IUCR_2034', 'IUCR_2040', 'IUCR_2050', 'IUCR_2090', 'IUCR_2091', 'IUCR_2092', 'IUCR_2093', 'IUCR_2094', 'IUCR_2095', 'IUCR_2110', 'IUCR_2111', 'IUCR_2160', 'IUCR_2170', 'IUCR_2210', 'IUCR_2220', 'IUCR_2230', 'IUCR_2250', 'IUCR_2820', 'IUCR_2825', 'IUCR_2826', 'IUCR_2830', 'IUCR_2850', 'IUCR_2851', 'IUCR_2860', 'IUCR_2870', 'IUCR_2900', 'IUCR_3100', 'IUCR_3710', 'IUCR_3730', 'IUCR_3731', 'IUCR_3760', 'IUCR_3800', 'IUCR_3960', 'IUCR_4220', 'IUCR_4230', 'IUCR_4255', 'IUCR_4310', 'IUCR_4510', 'IUCR_4625', 'IUCR_4650', 'IUCR_5001', 'IUCR_5002', 'IUCR_5004', 'IUCR_5007', 'IUCR_5011', 'IUCR_501A', 'IUCR_502R', 'IUCR_502T', 'IUCR_5110', 'IUCR_5111', 'Location Description_AIRPORT TERMINAL UPPER LEVEL - SECURE AREA', 'Location Description_ANIMAL HOSPITAL', 'Location Description_AUTO', 'Location Description_BRIDGE', 'Location Description_CHA LOBBY', 'Location Description_CTA PLATFORM', 'Location Description_DEPARTMENT STORE', 'Location Description_GROCERY FOOD STORE', 'Location Description_NURSING HOME/RETIREMENT HOME', 'Location Description_OTHER COMMERCIAL TRANSPORTATION', 'Location Description_OTHER RAILROAD PROP / TRAIN DEPOT', 'Location Description_VEHICLE - OTHER RIDE SERVICE']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create new variables by thresholding\n",
+    "threshold = 0.1\n",
+    "print len(clf.coef_)\n",
+    "print clf.alpha_\n",
+    "new_vars = [indep_var[x] for x, val in enumerate(clf.coef_) if abs(val) > threshold]\n",
+    "print new_vars"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "lasso = linear_model.Lasso(alpha=alpha)"
    ]
   },
   {
