--- a/RJ.ipynb
+++ b/RJ.ipynb
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 225,
    "metadata": {
     "collapsed": false
    },
@@ -310,6 +310,10 @@
     "# train on 2001-2015, predict on 2016\n",
     "indep_train = indep_data\n",
     "dep_train = dep_data\n",
+    "\n",
+    "# or you could train on two-thirds of the data to avoid overfitting\n",
+    "indep_train, indep_test, dep_train, dep_test = train_test_split(indep_data, dep_data, test_size=0.33, random_state=42)\n",
+    "\n",
     "indep_test = pd.DataFrame(ser).T.drop('04', 1)\n",
     "\n",
     "# fit\n",
@@ -331,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 217,
    "metadata": {
     "collapsed": false
    },
@@ -340,7 +344,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "R2 = 65.90%\n"
+      "R2 = 93.58%\n"
      ]
     }
    ],
@@ -351,7 +355,7 @@
     "dep_vars = ['04', '05', '06', '07', '08', '09', '10', '11', '12']\n",
     "indep_data = counts_frame[indep_vars]\n",
     "dep_data = counts_frame[dep_vars]\n",
-    "indep_train, indep_test, dep_train, dep_test = train_test_split(indep_data, dep_data, test_size=0.01, random_state=42)\n",
+    "indep_train, indep_test, dep_train, dep_test = train_test_split(indep_data, dep_data, test_size=0.33, random_state=42)\n",
     "\n",
     "# train\n",
     "regr = linear_model.LinearRegression()\n",
@@ -378,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 224,
    "metadata": {
     "collapsed": false
    },
