Agglomerative clustering by crime type
Not useful at this moment. The clustering is not grouping
nearby points together.

--- a/arrests_adaboost.ipynb
+++ b/arrests_adaboost.ipynb
@@ -8,13 +8,13 @@
    },
    "outputs": [],
    "source": [
-    "# This file predicts Arrests using LogisticRegression (GridSearched to find best params).\n",
+    "# This file predicts Arrests using AdaBoost (GridSearched to find best params).\n",
     "# Dataset: crimes.csv merged with poverty.csv"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -22,7 +22,6 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "#!pip install pandas --upgrade\n",
     "df = pd.read_csv('crimes.csv')"
    ]
   },
@@ -413,9 +412,9 @@
    },
    "outputs": [],
    "source": [
-    "# Metric for GridSearchCV\n",
     "from sklearn.metrics import confusion_matrix\n",
     "from __future__ import division\n",
+    "# Metric for GridSearchCV\n",
     "def cm_loss(estimator, X, y):\n",
     "    predictions = estimator.predict(X)\n",
     "    cm = confusion_matrix(y, predictions)\n",
@@ -500,13 +499,8 @@
     "parameters = {'n_estimators':[50, 500, 5000], 'learning_rate': [.001, .01, .1]}\n",
     "clf = GridSearchCV(model, parameters, scoring=cm_loss, cv=5, verbose=100)\n",
     "clf.fit(X_train, y_train)\n",
-    "best_model = clf.best_estimator_\n",
-    "best_model.fit(X_train, y_train)\n",
-    "predictions = best_model.predict(X_test)\n",
-    "cm = confusion_matrix(y_test, predictions)\n",
-    "plot_confusion_matrix(cm)\n",
-    "accuracies(cm)\n",
-    "print(clf.best_estimator_)"
+    "print(clf.best_estimator_)\n",
+    "best_model = clf.best_estimator_"
    ]
   },
   {
@@ -516,7 +510,13 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "best_model.fit(X_train, y_train)\n",
+    "predictions = best_model.predict(X_test)\n",
+    "cm = confusion_matrix(y_test, predictions)\n",
+    "plot_confusion_matrix(cm)\n",
+    "accuracies(cm)"
+   ]
   },
   {
    "cell_type": "code",
