Clean up agglomerative: does not work as expected

--- a/crime_type_agglomerative.ipynb
+++ b/crime_type_agglomerative.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -179,9 +179,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 11,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -193,34 +193,53 @@
     "x_range=(-91.686565684,-87.524529378)\n",
     "y_range=(36.619446395,42.022910333)\n",
     "\n",
-    "def plot_map(dfs):\n",
+    "def plot_map(df):\n",
     "    cvs = ds.Canvas(plot_width=800, plot_height=500)\n",
-    "    inter = []\n",
-    "    for k in dfs.keys():\n",
-    "        df = dfs[k]\n",
-    "        agg = cvs.points(df, 'X Coordinate', 'Y Coordinate')\n",
-    "        inter.append(tf.interpolate(agg, cmap=['blue', 'green'], how='eq_hist'))\n",
-    "    return tf.stack(*inter)"
+    "    agg = cvs.points(df, 'X Coordinate', 'Y Coordinate')\n",
+    "    return tf.interpolate(agg, cmap=['blue', 'green'], how='eq_hist')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAyAAAAH0CAYAAADFQEl4AAAKZ0lEQVR4nO3dUZbbKhAFQM5buXeu\n95HkxM7M2EhCgu6u+s8EyQJuA7JbAwAC2bbZLQAAAAAAqCzTKm2mawEAAAAAADKymwEAAAAAAAAA\nAAAAAAAAAAAAAAAAAJCar6EFAAAAAAAAAAAAAAAAAAAAAAAAAACA0HzVMAAAAAAAAPCVnUQAAAAA\nAAAAAAAAgOOcyQYAACAUhSwAAAAAAAAAAAAAAJCN9yUAAAAAAAAAAAAAAAAAAAAWtPLL4Cu3jXt5\nFgAAAAAAYAVW7AEAAAAAOMdKM8BcxmEAAAAA4ByrjAAAAAAAAAAAAAAAALCf93IAAJhGGAUAAIDB\nohfb0dsPAADdhF8AAAAAAAAAAADqejTH6AAAAF553wgAAAAAAAAAAAAAgD2cQwcAAAAAAIAedtYA\nAAAAAAAAgN8cIwAAAAAAAAAAAAAAAAAgM+/RAQAUJgy+ynI/slwHANzOJBqbzw8AALiUogMAAAAA\nAMjtp90QuyQAAAAMocAEAEoQegAAgG8pFgCIxtz1V5R7EaWdAAAAAAAAAAAAAOzjnCgAAAAAAAAA\nsI/TBgAAB70LUkIWAMBBghTQy3gBAAAAC1KwA0xmIAYAAKA8xTEAAGEIrwAAAAAAACuzmwMAAAAA\nAMAxEXeaIrYZAIBOwh4AAAAMptgGACAN4RYAAAAAAAAAAKZwdOca7isAAAAAAAAAAAAAAACtec8E\nAAAAAAAAfrFzBgBvmCgB1mA8BgjiqgHbRABr0jfhGvoWAAAAl1F0AgCwvAyh9eg1ZLh2AACKEmYB\nAOACgjbkoC8DwAfRJ8vo7eccnz8AFBQhAIxuY4RrBgAgqHdhM2sQzXpdEIl+CACLMkkDAAAADGbB\nBQAAABJR6AMAAAAAALXZLQEAIBUBFwAAgBcKRVhc1k6a9boAAIAFKUCAo4wfAAAAAAAAZ+zZbbEz\nAwC01oQCgFUYjwEAghDcgAqMdbAInREAOEueAMow4AHQy5wxj3eeAAAAAAAAetktAQBSqxB2Klwj\nAMAp3wWmdyHq7rPIvX9D8KM1zwEAAAAA1GV1EAAAAAAAgDVU37mqfv0AAACQjmIfYHEGavbqeWY8\nV9zFswYAAHCCouoc9y8unx0AAOwkRF/HvQUoyOD/lXsCAADAWwpHAIAnmcJRpmsBAAAgAYUq8Ilx\nAgjNIAYAAMDSegtXBS6sR78ESCT6oB69/fTzWQMA0E14JCLPLQA/eDRzBAAAAHAJK9MAAAAAAAAA\nAADAJI4xAgBDCRcAAACDKLD4SbVno9r1AgAAE50pQBQvAOcZS4HlGag4wnMDAAAAALAqK7gANT2P\n/+YCAEox8QEAK5JRAJjGJEQknlcACM5kDgA5meOhIB0fAAAmuyuUC/8AAAAAg1lwAQCAbwjKAPz1\n3+wGAPBMWAcAuIHQRUSeWwDuZu6BInR2+EVfAABC+BRahBoAAADgMhYeAADgJKEaAAAAgOEsOgEA\nAAAAAAAAAAAAACvwjgOjeaZ44YEAqjHuAQAAAAAAAABcwrEMAAC4WKTQHamtAHzPWA4AAADBKOaB\nbxkcANjL3AEAAAAAVVkdHM89BZjPWAwAO5g4IY+7+3P18aP69QMAgc0KMgIUACzAhAznHelH+h4A\nFCYIAAAAACT0adHHohB38JwBAOkJPAAAAAAAAAAAkE6WY0E915HlWnnP5wzz6H/ANJUGoN5rrXRP\nAKjJXAcT6HgAVGYeBEow2AEAABCawpYsPMvASMYU4JRZg4jBC2LSdwGA4QSM49w7AADghSKhrmif\nfbT2AgD/MJkzm2cwDp8VAABDCJYAAAAAEJCFPYB6Hm3n4G+yAAAgNIEWAAAAAAAAAAAIYuZxpxH/\nt+NaAJCXeR4AAABglqtWZnr/rpUhAN4xTwAAAIcoJgAAGEa4BAAAAIBorOoBAAAAAABAFHb3AACg\nIIUAAAAAAADACFl2XbJcBwAA/EjohVgi99nIbQcAWM2jCVcAAGSxysrhKu3oFa29AAAAAABAFXYx\nAABOEqgAAABgIoU5AAAAhygowbfjAZQkBAEAAAAAAAAAAADFOD4JAADAC4UiAADlVQzFFa8ZAAAA\nACA3K78AUJwwAKzCeEQ22+a5BgAAoRgAAKAKBSAAALCLIgIAAEjpU7GjGAIAmEAIAwCA34RjAAAo\nRAHAHTxnAAAAAAAAAAAAAAAAAABAKl6iBgCABAR7AAAAjno0RSUAAAAAAAAAAPCV91UAACjligAs\nVAMAAAAAAKzOjg4AAAAAAADACHZfAQBgkDvCtQA/j3sPAAAnCNQAAEAaChwA4BAhAgAAAAAAAAAA\nANJxPBAAAAAAAAAAIAXHQAAAAAAAAO5gVwYAAAAAAAAAAABaa47UAQAAAADAflbXAQAACjpaDPb+\nO8UmAAAfCY393CsAAFITeKnCsw4AAM3xIwAAmE7Yhvf0EQDgcgIH1KCvAwBQUk8QFpYBAAAAAAAA\nAAAAAAAAAAAAAACIyTdpAQAAKShuAADoIjgCAAAAAADwM7tJAACQlLAPAACkoLgBAAAAAAAAAAAA\nAACYzzseAADw5E9AFpR55nkAAAAAACAnK+BfuScAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA3G3bZrcAAADgJgogAAAoRAEAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAtfjNEgAAAAAAAAAAAAAAAAAAAAAAAAAAAIAyfDU1AAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFxo22a3AAAAAAAAspi5\n6m7FHwAAAAAAAAAAAAAAAAAAAAAAAAAAgGB8tS4AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgWzb7BYAAAAAAAAAAACU4LgWAADAPxRKAADA\nZRQcAAAAAAAAAAAAAAA5OS8OAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAHDSts1uAQAAAAAAAAAAAAAAAAAAAJfwQjkAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAACQhh9qBAAAwlLQAADQTXgEAAAAAAAAAAAW5ogTAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAUMmj+TFHAAAAAAAAAAAAAAAAAAAAAAAAAIDVbL4yEgAAANaiWAcAAAAAAAAAAAAAAAAA\ngAC8GAwAAAAAAAAAAAAAAAAAAAAAAAB/+HYuAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA\nAAAAAAAAAAAAAAAAAHLYttktAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAICQ/iAcAAAAAAAAA\nAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAXGvbZrcAAAAAAAAAAAC4ieNCAAAA\nAAAAAAAAAAAAAADAUF5iBgCArP4HJJTR0FSQIw0AAAAASUVORK5CYII=\n",
+      "text/plain": [
+       "<xarray.Image (y_axis: 500, x_axis: 800)>\n",
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       ..., \n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], dtype=uint32)\n",
+       "Coordinates:\n",
+       "  * y_axis   (y_axis) float64 1.861e+06 1.861e+06 1.861e+06 1.861e+06 ...\n",
+       "  * x_axis   (x_axis) float64 1.129e+06 1.129e+06 1.129e+06 1.129e+06 ..."
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# x = None\n",
+    "x = None\n",
     "\n",
-    "# for crime_type in dfs.keys():\n",
-    "#     coords = dfs[crime_type][['X Coordinate', 'Y Coordinate']]\n",
-    "#     coords = coords.dropna()\n",
-    "#     y = do_clustering(coords, linkage='complete', affinity='manhattan', n_clusters=n_clusters_for_crime_type[crime_type])\n",
-    "#     pts = grouped(coords, y)\n",
-    "#     x = plot_map(pts)\n",
+    "for crime_type in dfs.keys():\n",
+    "    if crime_type == 'ASSAULT':\n",
+    "        coords = dfs[crime_type][['X Coordinate', 'Y Coordinate']]\n",
+    "        coords = coords.dropna().sample(1000)\n",
+    "        y = do_clustering(coords, n_clusters=n_clusters_for_crime_type[crime_type])\n",
+    "        pts = grouped(coords, y) # TODO: fix: grouped returns a dict for all crime_types, but we use only one at a time\n",
+    "        x = plot_map(pts[0]) # TODO: plots one cluster for now\n",
     "\n",
-    "# x"
+    "x"
    ]
   },
   {
